--- a/ClientApp/src/app/admi-page/admi-page.component.css
+++ b/ClientApp/src/app/admi-page/admi-page.component.css
@@ -6,3 +6,35 @@
     margin: 0.5%;
     
 }
+.container {
+    display: block;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  /* Style for the input box */
+  .input-box {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid black; /* Adding the light gray line at the bottom */
+    padding: 5px;
+
+  }
+
+  /* Style for the heading */
+  h2 {
+    margin-bottom: 10px;
+  }
+
+  /* Style for the button */
+  .button {
+    margin-top: 10px;
+    padding: 8px 15px;
+    background-color: black;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
