--- a/ClientApp/src/app/admi-page/admi-page.component.html
+++ b/ClientApp/src/app/admi-page/admi-page.component.html
@@ -1,4 +1,4 @@
-<div class="row row-cols-1 row-cols-md-4">
+<div class="row row-cols-1 row-cols-md-5">
     <div class="col mb-4">
       <!-- Card -->
       <div class="card text-center">
@@ -107,4 +107,37 @@
       </div>
       <!-- Card -->
     </div>
+    <div class="col mb-4">
+      <!-- Card -->
+      <div class="card text-center">
+  
+        <!--Card image-->
+        <div class="view overlay">
+          
+          <a href="#!">
+            <div class="mask rgba-white-slight"></div>
+          </a>
+        </div>
+  
+        <!--Card content-->
+        <div class="card-body">
+  
+          <!--Title-->
+          <h4 class="card-title">Assign Device</h4>
+          <!--Text-->
+          <p class="card-text">Assign an user a device from your system</p>
+          <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
+          <button type="button" class="btn btn-dark btn-md">Click Me!!</button>
+  
+        </div>
+  
+      </div>
+      <!-- Card -->
+    </div>
+</div>
+
+<div class="container">
+  <h2 style="margin-right: 10px;">Add Device</h2>
+  <input type="text" class="input-box" placeholder="Enter device name">
+  <button class="button">Add</button>
 </div>
