--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -26,7 +26,7 @@
 
  
 
-                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Login</p>
+                  <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Logingfhjf</p>
                   <form class="mx-1 mx-md-4" action="Employee.html">
 
  
